# vtc-vta-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
cnm-cli/: Cargo.toml  README.md
cnm-cli/src/: auth.rs  client.rs  config.rs  main.rs  setup.rs
docs/: VTA_Service_Overview.pptx  bip32_paths.md  design.md  didcomm_protocol.md
pnm-cli/: Cargo.toml  README.md
pnm-cli/src/: auth.rs  config.rs  main.rs  setup.rs
vta-cli-common/src/commands/: acl.rs  config.rs  contexts.rs  keys.rs  mod.rs  webvh.rs
vta-sdk/: Cargo.toml
vta-sdk/src/: client.rs  credentials.rs  did_key.rs  didcomm_session.rs  lib.rs  session.rs  webvh.rs
vta-sdk/src/protocols/: mod.rs
vta-sdk/src/protocols/acl_management/: mod.rs
vta-sdk/src/protocols/did_management/: mod.rs  servers.rs
vta-sdk/src/protocols/seed_management/: mod.rs
vta-sdk/src/protocols/vta_management/: mod.rs
vta-service/: CLAUDE.md  Cargo.toml  README.md
vta-service/src/: config.rs  did_key.rs  did_webvh.rs  didcomm_bridge.rs  error.rs  keys_cli.rs  main.rs  messaging.rs  server.rs  setup.rs  status.rs  webvh_cli.rs  webvh_client.rs  webvh_didcomm.rs  webvh_store.rs
vta-service/src/auth/: extractor.rs
vta-service/src/contexts/: mod.rs
vta-service/src/keys/: mod.rs  seeds.rs
vta-service/src/keys/seed_store/: aws.rs  azure.rs  gcp.rs  mod.rs  plaintext.rs
vta-service/src/messaging/: auth.rs  mod.rs  response.rs
vta-service/src/messaging/handlers/: acl.rs  config.rs  contexts.rs  credentials.rs  did_webvh.rs  keys.rs  seeds.rs
vta-service/src/operations/: contexts.rs  credentials.rs  did_webvh.rs  keys.rs  mod.rs
vta-service/src/routes/: acl.rs  auth.rs  config.rs  contexts.rs  did_webvh.rs  keys.rs  mod.rs
vtc-service/: CLAUDE.md  Cargo.toml
vtc-service/src/: config.rs  did_webvh.rs  main.rs  messaging.rs  server.rs  setup.rs  status.rs
vtc-service/src/keys/: mod.rs
vtc-service/src/keys/seed_store/: aws.rs  azure.rs  gcp.rs  keyring.rs  mod.rs  plaintext.rs
vtc-service/src/routes/: auth.rs  mod.rs
vtc-vta-sdk/: Cargo.toml
vtc-vta-sdk/src/: lib.rs
vtc-vta-sdk/src/keys/: mod.rs
vtc-vta-service/: CLAUDE.md  Cargo.toml  config.toml
vtc-vta-service/src/: config.rs  error.rs  main.rs  server.rs  setup.rs
vtc-vta-service/src/acl/: mod.rs
vtc-vta-service/src/auth/: credentials.rs  extractor.rs  jwt.rs  mod.rs  session.rs
vtc-vta-service/src/contexts/: mod.rs
vtc-vta-service/src/keys/: derivation.rs  mod.rs  paths.rs  seed_store.rs
vtc-vta-service/src/routes/: acl.rs  auth.rs  config.rs  contexts.rs  keys.rs  mod.rs
vtc-vta-service/src/store/: mod.rs
