[package]
name = "cnm-cli"
description = "CLI Tool for Verified Trust Agents operating in Verified Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
vtc-vta-sdk = { path = "../vtc-vta-sdk" }
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.7"
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
chrono = { workspace = true }
ed25519-dalek = "2"
keyring = "3"
multibase = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
