[package]
name = "vta-sdk"
description = "SDK for Verifiable Trust Agents operating in Verifiable Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
didcomm = ["dep:affinidi-tdk"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
multibase = { workspace = true }
affinidi-tdk = { workspace = true, optional = true }
