[package]
name = "vta-sdk"
description = "SDK for Verifiable Trust Agents operating in Verifiable Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
didcomm = ["dep:affinidi-tdk"]
client = ["dep:reqwest", "dep:tracing", "dep:uuid", "dep:affinidi-tdk"]
session = ["client", "didcomm", "dep:affinidi-did-resolver-cache-sdk"]
keyring = ["dep:keyring"]
config-session = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
multibase = { workspace = true }
affinidi-tdk = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
affinidi-did-resolver-cache-sdk = { version = "0.7", optional = true }
keyring = { version = "3", optional = true }
