[package]
name = "vta-service"
description = "Service for Verified Trust Agents operating in Verified Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
default = ["setup"]
setup = ["dep:dialoguer", "dep:didwebvh-rs", "dep:url"]

[[bin]]
name = "vta"

[dependencies]
vta-sdk = { path = "../vta-sdk" }
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.7"
base64 = { workspace = true }
axum = "0.8"
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
fjall = { workspace = true }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = "2"
ed25519-dalek = "2"
ed25519-dalek-bip32 = { workspace = true }
hex = "0.4"
keyring = "3"
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
didwebvh-rs = { workspace = true, optional = true }
rand = { workspace = true }
dialoguer = { version = "0.12", optional = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
multibase = { workspace = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
