[package]
name = "vtc-vta-service"
description = "Service for Verified Trust Agents operating in Verified Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]

[dependencies]
axum = "0.8"
fjall = { workspace = true }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
