[package]
name = "vtc-vta-service"
description = "Service for Verified Trust Agents operating in Verified Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]

[dependencies]
vtc-vta-sdk = { path = "../vtc-vta-sdk" }
affinidi-tdk = { workspace = true }
axum = "0.8"
fjall = { workspace = true }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = "2"
ed25519-dalek-bip32 = { workspace = true }
hex = "0.4"
keyring = "3"
uuid = { workspace = true }
chrono = { workspace = true }
did-webvh = { workspace = true }
rand = { workspace = true }
dialoguer = "0.11"
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
multibase = { workspace = true }
